@@ -11,6 +11,7 @@ linux (5.3.7-2) UNRELEASED; urgency=medium
     (Closes: #942861)
   * debian/lib/python/debian_linux/utils.py: Use 'with' to manage file handles
   * debian/lib/python/debian_linux/utils.py: Store file mode for templates
+  * Copy template file permissions to output files
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 23 Oct 2019 18:32:15 +0100
 
